--- a/ReactSecond/app/src/main/res/layout/activity_user_setting.xml
+++ b/ReactSecond/app/src/main/res/layout/activity_user_setting.xml
@@ -8,28 +8,6 @@
     >
 
     <RelativeLayout
-        android:id="@+id/rl_hello"
-        android:layout_width="match_parent"
-        android:layout_height="47.33dip"
-        android:background="@color/white"
-        android:clickable="true"
-        android:paddingLeft="13.33dip"
-        >
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_centerVertical="true"
-            android:text="@string/hello_react"
-            android:textColor="@color/lagou_user_txt"
-            android:textSize="16sp"
-            />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
         android:id="@+id/rl_depth_component"
         android:layout_width="match_parent"
         android:layout_height="47.33dip"
@@ -51,7 +29,29 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/rl_msg_set"
+        android:id="@+id/rl_chance_plus"
+        android:layout_width="match_parent"
+        android:layout_height="47.33dip"
+        android:background="@color/white"
+        android:clickable="true"
+        android:paddingLeft="13.33dip"
+        >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:text="@string/hello_react"
+            android:textColor="@color/lagou_user_txt"
+            android:textSize="16sp"
+            />
+
+    </RelativeLayout>
+
+
+    <RelativeLayout
+        android:id="@+id/rl_movie_list"
         android:layout_width="match_parent"
         android:layout_height="47.33dip"
         android:layout_marginTop="19.33dip"
@@ -76,7 +76,7 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/rl_msg_cache"
+        android:id="@+id/rl_busninessman_detail"
         android:layout_width="match_parent"
         android:layout_height="47.33dip"
         android:background="@color/white"
@@ -126,7 +126,7 @@
     </RelativeLayout>
 
     <RelativeLayout
-        android:id="@+id/rl_user_rule"
+        android:id="@+id/rl_user_protocl"
         android:layout_width="match_parent"
         android:layout_height="47.33dip"
         android:background="@color/white"
